fix volume align style fix logo for resize button fix height of the fullscreen mode with scroll

--- a/src/css/components/access-menu.scss
+++ b/src/css/components/access-menu.scss
@@ -31,6 +31,7 @@ section{
 
 .access-menu.access-menu--hide{
   opacity: 0;
+  display: none;
 }
 :is(.access-menu, .profils-menu, .settings-menu, .subtitles-menu, .font-menu, .menu){
   width: 100%;
